# Local-Intelligent-File-Architect-FileSort-

./: .env.example  README.md  START_AND_INSTALL.md  download_icons.ts  index.html  make_icon.js  metadata.json  package-lock.json  package.json  vite.config.ts
docs/: competitor_analysis.md  governance.md  product-proposal.md  system-design.md
docs/diagrams/: mermaid diagrams.md
docs/specs/: modules.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Dashboard.tsx  SecurityModal.tsx  Sidebar.tsx
src/lib/: utils.ts
